# bazel-bootstrap

./: .bazel_fix_commands.json  .bazeliskrc  .bazelrc  .gitignore  .gitpod.Dockerfile  .gitpod.yml  BUILD.bazel  Cargo.toml  README.md  WORKSPACE  go.mod  go.sum
scripts/: bazel-complete.bash  gitpod-init.sh
src/: maven_install.json
src/dotnet/echo/: BUILD.bazel  main.fs
src/dotnet/nuget/: add.sh  delete.sh  nuget.bzl  nuget2config.json
src/go/: add-go-dep.sh  godeps_macro.bzl  update-gomod.sh
src/go/echo/: BUILD.bazel  echo.go  main.go
src/proto/echo/models/: BUILD.bazel  models.proto
src/proto/echo/service/: BUILD.bazel  service.proto
src/rust/: update-analyzer.sh
src/rust/cargo/: BUILD.bazel  crates.bzl
src/rust/cargo/remote/: BUILD.log-0.3.6.bazel
src/rust/echo/: BUILD.bazel  main.rs
src/scala/: BUILD.bazel
src/scala/com/github/purkhusid/echo/: BUILD.bazel  main.scala
src/typescript/: .eslintrc.js  BUILD.bazel  package.json  tsconfig.json
src/typescript/echo/: BUILD.bazel  main.ts
