load("@bazel_gazelle//:def.bzl", "gazelle")

# gazelle:prefix github.com/purkhusid/bazel-bootstrap
# gazelle:build_file_name BUILD.bazel
# gazelle:exclude src/typescript
gazelle(name = "gazelle")

alias(
    name = "tsconfig.json",
    actual = "//src/typescript:tsconfig.json",
    visibility = ["//visibility:public"],
)