load("@bazel_gazelle//:def.bzl", "gazelle")
load("@io_bazel_rules_rust//rust:rust.bzl", "rust_analyzer")

# gazelle:prefix github.com/purkhusid/bazel-bootstrap
# gazelle:build_file_name BUILD.bazel
# gazelle:exclude src/typescript
gazelle(name = "gazelle")

alias(
    name = "tsconfig.json",
    actual = "//src/typescript:tsconfig.json",
    visibility = ["//visibility:public"],
)

rust_analyzer(
    name = "rust_analyzer",
    targets = ["//src/rust/echo:main"],
    visibility = ["//visibility:public"],
)

platform(
    name = "buildbuddy_platform",
    constraint_values = [
        "@bazel_tools//platforms:x86_64",
        "@bazel_tools//platforms:linux",
        "@bazel_tools//tools/cpp:clang",
        "@io_bazel_rules_dotnet//dotnet/toolchain:3.1.100",
    ],
    remote_execution_properties = "\n        properties {\n           name: \"OSFamily\"\n           value:  \"Linux\"\n        }\n        properties {\n           name: \"container-image\"\n           value: \"none\"\n        }\n        ",
)
