load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "echo_lib",
    srcs = [
        "echo.go",
        "main.go",
    ],
    importpath = "github.com/purkhusid/bazel-bootstrap/src/go/echo",
    visibility = ["//visibility:private"],
    deps = [
        "//src/proto/echo/models",
        "//src/proto/echo/service",
        "@org_golang_google_grpc//:go_default_library",
        "@org_golang_x_net//context",
    ],
)

go_binary(
    name = "echo",
    embed = [":echo_lib"],
    visibility = ["//visibility:public"],
)
