load("@io_bazel_rules_rust//rust:rust.bzl", "rust_binary")
load("@io_bazel_rules_rust//proto:toolchain.bzl", "GRPC_COMPILE_DEPS")

rust_binary(
    name = "main",
    srcs = ["main.rs"],
    visibility = ["//visibility:public"],
    deps = [
        "//src/proto/echo/service:src_proto_echo_service",
        "//src/rust/cargo:log",
    ] + GRPC_COMPILE_DEPS,
)
