load("@bazel_skylib//rules:write_file.bzl", "write_file")
load("@rules_proto//proto:defs.bzl", "proto_library")
load("@io_bazel_rules_go//go:def.bzl", "go_library")
load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")
load("@io_bazel_rules_scala//scala_proto:scala_proto.bzl", "scala_proto_library")
load("@rules_typescript_proto//:index.bzl", "typescript_proto_library")

proto_library(
    name = "models_proto",
    srcs = ["models.proto"],
    visibility = ["//visibility:public"],
)

go_proto_library(
    name = "models_go_proto",
    importpath = "github.com/purkhusid/bazel-bootstrap/src/proto/echo/models",
    proto = ":models_proto",
    visibility = ["//visibility:public"],
)

go_library(
    name = "models",
    embed = [":models_go_proto"],
    importpath = "github.com/purkhusid/bazel-bootstrap/src/proto/echo/models",
    visibility = ["//visibility:public"],
)

write_file(
    name = "write_gomodule",
    out = "models_go_proto_/github.com/purkhusid/bazel-bootstrap/src/proto/echo/models/go.mod",
    content = ["module github.com/purkhusid/bazel-bootstrap/src/proto/echo/models"],
)

scala_proto_library(
    name = "scala",
    deps = [":models_proto"],
    visibility = ["//visibility:public"],
)

typescript_proto_library(
    name = "typescript",
    proto = ":models_proto",
    visibility = ["//visibility:public"],
)