load("@bazel_skylib//rules:write_file.bzl", "write_file")
load("@rules_proto//proto:defs.bzl", "proto_library")
load("@io_bazel_rules_go//go:def.bzl", "go_library")
load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")
load("@io_bazel_rules_scala//scala_proto:scala_proto.bzl", "scala_proto_library")
load("@rules_typescript_proto//:index.bzl", "typescript_grpc_node_library")

proto_library(
    name = "service_proto",
    srcs = ["service.proto"],
    visibility = ["//visibility:public"],
    deps = ["//src/proto/echo/models:models_proto"],
)

go_proto_library(
    name = "service_go_proto",
    compilers = ["@io_bazel_rules_go//proto:go_grpc"],
    importpath = "github.com/purkhusid/bazel-bootstrap/src/proto/echo/service",
    proto = ":service_proto",
    visibility = ["//visibility:public"],
    deps = ["//src/proto/echo/models"],
)

go_library(
    name = "service",
    embed = [":service_go_proto"],
    importpath = "github.com/purkhusid/bazel-bootstrap/src/proto/echo/service",
    visibility = ["//visibility:public"],
)

write_file(
    name = "write_gomodule",
    out = "service_go_proto_/github.com/purkhusid/bazel-bootstrap/src/proto/echo/service/go.mod",
    content = ["module github.com/purkhusid/bazel-bootstrap/src/proto/echo/service"],
)

scala_proto_library(
    name = "scala",
    deps = [":service_proto"],
    visibility = ["//visibility:public"],
)

typescript_grpc_node_library(
  name = "typescript",
  proto = ":service_proto",
  use_grpc_js = True,
)